# vmm

./: LICENSE  README.md  pyproject.toml
vmm/: __init__.py  config.py  fzf.py  menu.py  model.py
vmm/wofi/: __init__.py
vmmgr/: __init__.py  config.py  menu.py  model.py
